# s3_watch_dev

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c
main/bsp/: bsp.c  bsp.h  display.c  display.h  pcf85063.c  pcf85063.h  pins.h  qmi8658.c  qmi8658.h  st7701.c  st7701.h  touch_cst820.c  touch_cst820.h  xl9535.c  xl9535.h
main/ui/: screen_compass.c  screen_menu.c  screen_settings.c  screen_watchface.c  ui.c  ui.h
